# scrapy_tt

./: LICENSE  README.md  pyproject.toml
real_estate/: items.py  settings.py  utils.py
real_estate/spiders/: herbo.py  kelm.py
