[tool.poetry]
name = "scrapy-tt"
version = "0.1.0"
description = ""
authors = ["antony_kosenko <kosenko.anton.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
scrapy-selenium = "^0.0.7"
webdriver-manager = "^4.0.1"
selenium = "3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
